<resources>
    <string name="app_name">S\'Beer Eck</string>
    <string name="action_settings">Paramètres</string>
    <string name="parties_fragment_name">Soirées</string>
    <string name="members_fragment_name">Adhérents</string>
    <string name="products_activity_name">Bières et autres</string>
    <string name="validate">Valider</string>
    <string name="action_search">Rechercher</string>
    <string name="drawer_open">Ouvrir le menu latéral</string>
    <string name="drawer_close">Fermer le menu latéral</string>
    <string name="edit">Éditer</string>
    <string name="delete">Supprimer</string>
    <string name="delete_product_confirm">Êtes-vous sûr de vouloir supprimer ce produit ?</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_members">Adhérents</string>
    <string name="total_balance">Solde Total</string>
    <string name="update_balance">Ajuster le solde</string>
    <string name="delete_member">Clôturer</string>
    <string name="pay_membership">Cotiser</string>
    <string name="export_member">Exporter</string>
    <string name="delete_member_confirm">Êtes-vous sûr de vouloir clôturer ce compte ?</string>
    <string name="ok">Ok</string>
    <string name="valid_membership">Cotisation à jour</string>
    <string name="invalid_membership">Cotisation expirée</string>
    <string name="membership_confirm">Valider la cotisation ?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_member_title">Nouvel adhérent</string>
    <string name="last_name">Nom</string>
    <string name="school">École</string>
    <string name="mendatory_email">Email</string>
    <string name="phone">Téléphone</string>
    <string name="add">Ajouter</string>
    <string name="reason">Motif</string>
    <string name="amount">Montant</string>
    <string-array name="schools">
        <item>Écoles</item>
        <item>Ense3</item>
        <item>Ensimag</item>
        <item>Esisar</item>
        <item>GI</item>
        <item>Papet</item>
        <item>Phelma</item>
    </string-array>
    <string name="title_activity_main">S\'Beer Eck</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beer_and_other_fragment_name">Bières et autres</string>
    <string name="delete_party_confirm">Êtes-vous sûr de vouloir supprimer la soirée ?</string>
    <string name="new_product_dialog_title">Nouveau produit</string>
    <string name="edit_product_dialog_title">Editer le produit</string>
    <string name="type">Type</string>
    <string name="beer">Bière</string>
    <string name="deposit">Caution</string>
    <string name="other">Autre</string>
    <string name="price">Prix</string>
    <string name="title_activity_party">PartyActivity</string>
    <string name="title_activity_new_party">Nouvelle soirée</string>
    <string name="mendatory_date">Date</string>
    <string name="beer_price">Tarifs des bières (demi)</string>
    <string name="normal">Normales</string>
    <string name="special">Spéciales</string>
    <string name="served_beers">Bières servies</string>
    <string name="title_activity_edit_party">Éditer la soirée</string>
    <string name="title_activity_add_beers">Ajouter des bières</string>
    <string name="title_activity_new_transaction">Nouvelle transaction</string>
    <string name="member_name">Nom de l\'adhérent</string>
    <string name="food">Nourriture</string>
    <string name="refill_or_other">Recharge/autre</string>
    <string name="half_pint">Demi</string>
    <string name="pint">Pinte</string>
    <string name="pitcher">Pichet</string>
    <string name="of">de</string>
    <string name="cash_in_deposit">Encaisser</string>
    <string name="cash_out_deposit">Rendre</string>
    <string name="refill">Recharge</string>
    <string name="balance">Solde</string>
    <string name="transaction_balance_too_low_title">Solde insuffisant</string>
    <string name="add_transaction_anyway">Ajouter quand même</string>
    <string name="parties_loading_error">Impossible de charger les soirées</string>
    <string name="party_delete_error">Impossible de supprimer la soirée</string>
    <string name="beers_loading_error">Impossible de charger les bières</string>
    <string name="party_adding_error">Impossible d\'ajouter la soirée</string>
    <string name="party_loading_error">Impossible de charger la soirée</string>
    <string name="product_delete_error">Impossible de supprimer le produit</string>
    <string name="product_adding_error">Impossible d\'ajouter le produit</string>
    <string name="member_loading_error">Impossible de charger le membre</string>
    <string name="member_delete_error">Impossible de supprimer le membre</string>
    <string name="first_name">Prénom</string>
    <string name="member_adding_error">Impossible d\'ajouter le membre</string>
    <string name="renew_membership_error">Impossible de renouveller l\'adhésion</string>
    <string name="transactions_loading_error">Impossible de charger les transactions</string>
    <string name="transaction_delete_error">Impossible de supprimer la transaction</string>
    <string name="food_loading_error">Impossible de charger la nourriture</string>
    <string name="deposits_loading_error">Impossible de charger les cautions</string>
    <string name="transaction_add_error">Impossible d\'ajouter la transaction</string>
    <string name="threshold_loading_error">Impossible de charger le seuil des soldes trop bas</string>
    <string name="transaction_outdated_membership_title">Cotisation expirée</string>
    <string name="update_balance_error">Impossible d\'ajuster le solde</string>
    <string name="default_beer_price_loading_error">Impossible de charger les prix par défaut</string>
    <string name="settings">Paramètres</string>
    <string name="authentication">Authentification</string>
    <string name="server_address">Adresse du serveur</string>
    <string name="port">Port</string>
    <string name="password">Mot de passe</string>
    <string name="preferences">Préférences</string>
    <string name="balance_too_low_alert">Alerte solde</string>
    <string name="default_beer_price">Prix des bières par défaut</string>
    <string name="about">A propos</string>
    <string name="about_info">© Lucas Trampal 2018</string>
    <string name="preferences_loading_error">Impossible de charger les préférences</string>
    <string name="preferences_saving_error">Impossible de sauvegarder les préférences</string>
    <string name="preferences_saved">Préférences sauvegardées avec succès</string>
    <string name="invalid_input">Saisie invalide</string>
    <string name="saved_server_address">saved_server_address</string>
    <string name="app_preferences">app_preferences</string>
    <string name="sbeereck_key">sbeereck_key</string>
    <string name="saved_server_password">saved_server_password</string>
    <string name="auth_not_configured_error">Veuillez configurer l\'authentification.</string>
    <string name="products_loading_error">Impossible de charger les produits</string>
    <string name="members_loading_error">Impossible de charger les membres</string>
</resources>
